Partially fixed body overflow

--- a/src/scss/Above_the_sea.scss
+++ b/src/scss/Above_the_sea.scss
@@ -11,9 +11,9 @@
 .above-the-sea-image-container {
     width: 41.5vw;  
     height: 41.5vw;
-    min-width: 300px;
+    min-width: 280px;
     max-width: 600px;
-    min-height: 300px;
+    min-height: 280px;
     max-height: 600px;
 
     > img {
@@ -24,7 +24,7 @@
 
 .above-the-sea-text {
     width: 45%;
-    min-width: 320px;
+    min-width: 280px;
 
     h1 {
         width: 35%;
@@ -36,12 +36,12 @@
 
     p {
         width: 50%;
-        min-width: 300px;
+        min-width: 280px;
     }
 
     blockquote {
         width: 69%;
-        min-width: 300px;
+        min-width: 50px;
         margin: 40px 0 50px 0;
     }
 
