--- a/src/scss/Editors_pick.scss
+++ b/src/scss/Editors_pick.scss
@@ -38,8 +38,8 @@
 .editors-pick__slide__inner {
     width: 65vw;
     height: 65vw;
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 280px;
+    min-height: 280px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
