--- a/src/scss/Email_form.scss
+++ b/src/scss/Email_form.scss
@@ -1,10 +1,9 @@
 .email-form {
-    padding: 0;
     input[type="email"]{
-        display: none;
         width: 28vw;
         max-width: 500px;
-        min-width: 250px;
+        min-width: 150px;
+        padding-left: 20px;
         height: 2.8em;
         border-radius: 2em;
     }
