--- a/src/scss/Mountain_collections.scss
+++ b/src/scss/Mountain_collections.scss
@@ -11,14 +11,14 @@
 }
 
 .mountain-collections__text {
-    min-width: 300px;
+    min-width: 280px;
     > h1 {
         font-size: 3.5em;
         margin-bottom: 0.6em;
     }
     > .text {
         width: 35%;
-        min-width: 300px;
+        min-width: 280px;
     }
 }
 
