--- a/src/scss/Subscribe.scss
+++ b/src/scss/Subscribe.scss
@@ -4,11 +4,11 @@
     padding: 2em;
     background-image: url("../../public/files/images/map_dot.png");
     background-repeat: no-repeat;
+    background-color: blue;
     background-position: center center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    // display: none;
     .subscribe-section__inner {
         text-align: center;
     
