--- a/src/scss/general_styles.scss
+++ b/src/scss/general_styles.scss
@@ -9,12 +9,13 @@ body{
     padding: 0;
     color: white;
     background-color: $background-color;
+    background-color: red;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
 
     * {
-        // border: 1px solid white
+         //border: 1px solid white
     }
 }
 
